# celsius_to_fahrenheit

./: LICENSE  README.md  pyproject.toml  requirements.txt
celsius_to_fahrenheit/: celsius_to_fahrenheit.py
celsius_to_fahrenheit/templates/: index.html
celsius_to_fahrenheit/tests/: __init__.py  test_celsius_to_fahrenheit.py
