[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "celsius to fahrenheit"
version = "0.1.0"

description = "Convert from celsius to fahrenheit"
readme = "README.md"  # Assuming you have a README.md file in your repo
requires-python = ">=3.8"  # Specify the minimum Python version your package supports